tests/course/errors/DeleteErrorUuid.bru
meta {
  name: DeleteErrorUuid
  type: http
  seq: 10
}

delete {
  url: {{baseUrl}}/courses/{{invalidUuid}}
  body: json
  auth: none
}

assert {
  res.status: in 400, 404
}
